--- a/why-us.html
+++ b/why-us.html
@@ -77,18 +77,51 @@
                 </div>
             </div>
             <!-- Section Brief -->
-            <div class="container-fluid pos-rel pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p whyus-brief">
+            <div class="container-fluid pos-rel pt-lg-5p pb-lg-10p pl-lg-5p pr-lg-0 whyus-brief">
                 <div class="row">
-                    <div class="col-lg-12 pl-lg-15p pr-lg-10p slideanimLeft">
-                        <h4 class="font-montserrat-italic font-white">First of all,</h4>
-                        <h3 class="mb-lg-30 font-white">ReservasiDulu is <span class="font-montserrat-extrabold">easy to access</span></h3>
+                    <div class="col-lg-6 pl-lg-10p pr-lg-0 slideanimLeft">
+                        <div class="pl-lg-13p">
+                            <h4 class="font-montserrat-italic font-white">First of all,</h4>
+                            <h3 class="mb-lg-30 font-white">ReservasiDulu is <span class="font-montserrat-extrabold">Easy to </span></h3>
+                        </div>
+                        <img class="img-fluid w-lg-90p" src="images/02-why-us/whyus-image-02.png" alt="reservasidulu">
                     </div>
-                    <div class="col-lg-6 pl-lg-10p slideanimLeft">
-                        <img class="img-fluid mt-lg-40" src="images/02-why-us/whyus-image-02.png" alt="reservasidulu">
-                    </div>
-                    <div class="col-lg-6 pr-lg-10p slideanim">
-                        <div class="w-lg-80p font-white">
+                    <div class="col-lg-6 pl-lg-0 pr-lg-0 slideanim">
+                        <div class="container1">
+                            <h3 class="mb-lg-30 font-white"><span class="font-montserrat-extrabold">Access</span></h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
+                            <h3 class="mb-lg-30 font-white"><span class="font-montserrat-extrabold">Use</span></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
+                            <h3 class="mb-lg-30 font-white"><span class="font-montserrat-extrabold">Make</span></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         </div>
                     </div>
                 </div>
